--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,21 +7,21 @@ on:
 
 jobs:
     build:
-      runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
-          - name: Checkout
-          - uses: actions/checkout@v3
-          
-          - name: Setup Gradle
-            uses: gradle/gradle-build-action@v3
-
-          - name: Build JAR
-            run: |
-                cd infinicraft-mod
-                gradlew build
-          - uses: actions/upload-artifact@v4
-            with:
-                name: my-artifact
-                path: build/libs/*.jar
+         - name: Checkout
+           uses: actions/checkout@v3
+            
+         - name: Setup Gradle
+           uses: gradle/gradle-build-action@v3
+            
+         - name: Build JAR
+           run: |
+              cd infinicraft-mod
+              gradlew build
+         - uses: actions/upload-artifact@v4
+           with:
+              name: artifact
+              path: build/libs/*.jar
 
            
