--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,8 @@ jobs:
          - name: Build JAR
            run: |
               cd infinicraft-mod
-              gradlew build
+              chmod +x gradlew
+              ./gradlew build
          - uses: actions/upload-artifact@v4
            with:
               name: artifact
