--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,12 @@ jobs:
         steps:
          - name: Checkout
            uses: actions/checkout@v3
-            
+        
+         - uses: actions/setup-java@v4
+           with:
+             distribution: 'temurin'
+             java-version: '21'
+         
          - name: Setup Gradle
            uses: gradle/gradle-build-action@v3
             
