almost working. last fixes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,6 @@ jobs:
          - uses: actions/upload-artifact@v4
            with:
               name: artifact
-              path: build/libs/*.jar
+              path: infinicraft-mod/build/libs/*.jar
 
            
