--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
               gradle build
          - uses: actions/upload-artifact@v4
            with:
-              name: artifact
-              path: infinicraft-mod/build/libs/*.jar
+              name: infinicraft-mod
+              path: infinicraft-mod/build/libs/*[0-9].jar
 
            
