Many improvements + new icon generator

--- a/infinicraft-client/requirements.txt
+++ b/infinicraft-client/requirements.txt
@@ -1,9 +1,9 @@
+torch
+rembg
 diffusers
-transformers
-peft
-watchdog
-rembg[gpu]
-accelerate
 flask
+requests
 pyyaml
-xformers
+scikit-learn
+pillow
+matplotlib
