--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,37 @@
 name: Build
 on:
-    push:
-      branches: [ "main" ]
-    pull_request:
-      branches: [ "main" ]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-         - name: Checkout
-           uses: actions/checkout@v3
-        
-         - uses: actions/setup-java@v4
-           with:
-             distribution: 'temurin'
-             java-version: '21'
-         
-         - name: Setup Gradle
-           uses: gradle/gradle-build-action@v3
-            
-         - name: Build JAR
-           run: |
-              cd infinicraft-mod
-              gradle build
-         - uses: actions/upload-artifact@v4
-           with:
-              name: infinicraft-mod
-              path: infinicraft-mod/build/libs/*[0-9].jar
+  build:
+    runs-on: ubuntu-latest
 
-           
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Run Python build script
+        run: python build.py
+
+      - name: Upload final JAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: infinicraft-jar
+          path: Build/infinicraft-*.jar
